# trik-demo-notes-py

./: README.md  manifest.json  pyproject.toml  trikhub.json
src/trik_demo_notes_py/: main.py  manifest.json
src/trik_demo_notes_py/prompts/: system.md
