[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trik-demo-notes-py"
version = "2.1.1"
description = "A demo trik for managing personal notes with persistent storage"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "trikhub>=0.17.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["trik_demo_notes_py*"]

[tool.setuptools.package-data]
trik_demo_notes_py = ["manifest.json", "prompts/*.md"]
